[tool.poetry]
name = "depend-b"
version = "0.1.0"
description = ""
authors = ["abefrandsen <abe.frandsen@envedabio.com>"]
readme = "README.md"
packages = [{include = "depend_b"}]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
shared-dependency = {git = "https://github.com/abefrandsen/shared_dependency.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
